--- a/test/01-basics/map-projection-simple/map.html
+++ b/test/01-basics/map-projection-simple/map.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map_canvas { height: 100% }
-    </style>
+    <meta charset="utf-8">
+    <title>Google Maps JavaScript API v3 Example: Simple Projection</title>
+    <link href="https://google-developers.appspot.com/maps/documentation/javascript/examples/default.css" rel="stylesheet">
   </head>
   <body>
-    <div id="map_canvas" style="width:100%; height:100%"></div>
+    <div id="gallPetersMap" style="width: 500px; height: 400px;"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
