add examples available at https://google-developers.appspot.com/maps/documentation/javascript/examples/ in 'Libraries' section

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -122,6 +122,38 @@
       <li><a href="07-services/maxzoom-simple/map.html">maxzoom-simple</a></li>
     </ul>
 
+    <h2>libraries</h2>
+    <h3>adsense</h3>
+    <ul>
+      <li><a href="08-libraries/adsense/ads-adunit/map.html">ads-adunit</a></li>
+      <li><a href="08-libraries/adsense/ads-adunit-format/map.html">ads-adunit-format</a></li>
+    </ul>
+    <h3>drawing</h3>
+    <ul>
+      <li><a href="08-libraries/drawing/drawing-tools/map.html">drawing-tools</a></li>
+    </ul>
+    <h3>geometry</h3>
+    <ul>
+      <li><a href="08-libraries/geometry/geometry-encodings/map.html">geometry-encodings</a></li>
+      <li><a href="08-libraries/geometry/geometry-headings/map.html">geometry-headings</a></li>
+    </ul>
+    <h3>panoramio</h3>
+    <ul>
+      <li><a href="05-layers/layer-panoramio/map.html">layer-panoramio</a></li>
+      <li><a href="05-layers/layer-panoramio-tags/map.html">layer-panoramio-tags</a></li>
+      <li><a href="05-layers/layer-panoramio-widget/map.html">layer-panoramio-widget</a></li>
+    </ul>
+    <h3>places</h3>
+    <ul>
+      <li><a href="08-libraries/places/place-details/map.html">place-details</a></li>
+      <li><a href="08-libraries/places/place-search/map.html">place-search</a></li>
+      <li><a href="08-libraries/places/places-autocomplete/map.html">places-autocomplete</a></li>
+    </ul>
+    <h3>weather</h3>
+    <ul>
+      <li><a href="05-layers/layer-weather/map.html">layer-weather</a></li>
+    </ul>
+
     <h2>styling</h2>
     <ul>
       <li><a href="99-styling/map-options-styling/map.html">map-options-styling</a></li>
