events for MVCArray

--- a/test/browser_tests.html
+++ b/test/browser_tests.html
@@ -22,6 +22,7 @@
 </head>
 <body>
   <h1>Loading and running tests</h1>
+  <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script type="application/dart" src="browser_tests.dart"></script>
   <script src="https://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
 </body>
