fix typo in tag name

--- a/example/08-libraries/places/places-autocomplete/map.html
+++ b/example/08-libraries/places/places-autocomplete/map.html
@@ -31,7 +31,7 @@
       <label for="changetype-establishment">Establishments</label>
 
       <input type="radio" name="type" id="changetype-geocode">
-      <label for="changetype-geocode">Geocodes</lable>
+      <label for="changetype-geocode">Geocodes</label>
     </div>
     <div id="map_canvas"></div>
 
