--- a/example/01-basics/map-simple/map.html
+++ b/example/01-basics/map-simple/map.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Map Simple</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Simple Map</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map_canvas {
-        margin: 0;
-        padding: 0;
+      html, body, #map-canvas {
         height: 100%;
+        margin: 0px;
+        padding: 0px
       }
     </style>
   </head>
   <body>
-    <div id="map_canvas"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
