--- a/example/01-basics/map-rtl/map.html
+++ b/example/01-basics/map-rtl/map.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html dir="rtl">
   <head>
-    <title>Google Maps JavaScript API v3 Example: Right-to-Left Text</title>
+    <title>Right-to-Left Languages</title>
     <meta charset="utf-8">
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,8 +12,7 @@
     </style>
   </head>
   <body>
-    <p>القاهرة Egypt</p>
-    <div id="map_canvas" style="height: 600px;"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=ar"></script>
     <script type="application/dart" src="page.dart"></script>
