--- a/example/01-basics/map-simple-async/map.html
+++ b/example/01-basics/map-simple-async/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Asynchronous Map Simple</title>
+    <title>Asynchronous Loading</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas"></div>
+    <div id="map-canvas"></div>
 
     <script type="application/dart" src="page.dart"></script>
     <script src="packages/browser/dart.js"></script>
