--- a/example/04-overlays/overlay-symbol-dashed/map.html
+++ b/example/04-overlays/overlay-symbol-dashed/map.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Symbols on a Polyline</title>
+    <title>Dashed Lines (Symbols)</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="height:300px; width: 300px"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
