--- a/example/04-overlays/marker-remove/map.html
+++ b/example/04-overlays/marker-remove/map.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Marker animations with setTimeout()</title>
+    <title>Remove Markers</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -22,10 +23,13 @@
     </style>
   </head>
   <body>
-    <div id="panel" style="margin-left: -52px">
-      <button id="drop">Drop Markers</button>
-     </div>
+    <div id="panel">
+      <input id="clearMarkers" type=button value="Hide Markers">
+      <input id="showMarkers" type=button value="Show All Markers">
+      <input id="deleteMarkers" type=button value="Delete Markers">
+    </div>
     <div id="map-canvas"></div>
+    <p>Click on the map to add markers.</p>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
