--- a/example/04-overlays/overlay-hideshow/map.html
+++ b/example/04-overlays/overlay-hideshow/map.html
@@ -3,21 +3,31 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Overlay Simple</title>
+    <title>Showing/Hiding overlays</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
     </style>
   </head>
   <body>
-    <div id ="toolbar" style="width: 100%; height:20px; text-align:center">
-      <input type="button" value="Toggle Visibility" id="toggle"></input>
-      <input type="button" value="Toggle DOM Attachment" id="toggleDOM"></input>
+    <div id ="panel">
+      <input type="button" value="Toggle visibility" id="toggle"></input>
+      <input type="button" value="Toggle DOM attachment" id="toggleDOM"></input>
     </div>
-    <div id="map_canvas" style="top:30px;"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
