--- a/example/04-overlays/polygon-draggable/map.html
+++ b/example/04-overlays/polygon-draggable/map.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Marker animations with setTimeout()</title>
+    <title>Draggable Polygons</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
-      #panel {
-        position: absolute;
-        top: 5px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }
     </style>
   </head>
   <body>
-    <div id="panel" style="margin-left: -52px">
-      <button id="drop">Drop Markers</button>
-     </div>
     <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
