--- a/example/05-layers/layer-mapsengine/map.html
+++ b/example/05-layers/layer-mapsengine/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>GeoRSS Layers</title>
+    <title>Maps Engine Layer</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -15,7 +15,7 @@
   <body>
     <div id="map-canvas"></div>
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=visualization"></script>
     <script type="application/dart" src="page.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
