--- a/example/05-layers/layer-data-simple/map.html
+++ b/example/05-layers/layer-data-simple/map.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Weather Layer</title>
+    <title>Data Layer: Simple</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,9 +13,9 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas"></div>
+    <div id="map-canvas"></div>
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=weather"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
