--- a/example/05-layers/layer-data-style/map.html
+++ b/example/05-layers/layer-data-style/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>GeoRSS Layers</title>
+    <title>Data Layer: Styling</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
