--- a/example/05-layers/layer-kml-features/map.html
+++ b/example/05-layers/layer-kml-features/map.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: KmlLayer KML Features</title>
+    <title>KML feature details</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,8 +13,8 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="width:79%; height:100%; float:left"></div>
-    <div id="content_window" style="width:19%; height:100%; float:left"></div>
+    <div id="map-canvas" style="width:79%; height:100%; float:left"></div>
+    <div id="content-window" style="width:19%; height:100%; float:left"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
