--- a/example/05-layers/mapsenginelayer-noauth-layerkey/map.html
+++ b/example/05-layers/mapsenginelayer-noauth-layerkey/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Panoramio Layer</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <title>MapsEngineLayer / no authentication / layerKey</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,10 +13,9 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas"></div>
+    <div id="map-canvas"></div>
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=panoramio"></script>
-    <script src="https://ssl.panoramio.com/wapi/wapi.js?v=1"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=visualization"></script>
     <script type="application/dart" src="page.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
