--- a/example/06-maptypes/maptype-base/map.html
+++ b/example/06-maptypes/maptype-base/map.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Base MapTypes</title>
+    <title>Basic map types</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="width: 640px; height: 480px;">map div</div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
