--- a/example/06-maptypes/maptype-image-overlay/map.html
+++ b/example/06-maptypes/maptype-image-overlay/map.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Image Map Type</title>
+    <title>Overlaying an image map type</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
       html, body, #map-canvas {
-        margin: 0;
-        padding: 0;
         height: 100%;
+        margin: 0px;
+        padding: 0px
       }
     </style>
   </head>
