--- a/example/06-maptypes/aerial-rotation/map.html
+++ b/example/06-maptypes/aerial-rotation/map.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Simple Aerials</title>
+    <title>Rotating 45° imagery</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -14,7 +14,7 @@
   </head>
   <body>
     <input type="button" value="Auto Rotate" id="autoRotate">
-    <div id="map_canvas"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
