--- a/example/07-services/directions-complex/map.html
+++ b/example/07-services/directions-complex/map.html
@@ -3,36 +3,46 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Directions Complex</title>
+    <title>Directions service (complex)</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
     </style>
   </head>
   <body>
-    <div style="text-align:center">
-    <b>Start: </b>
-    <select id="start">
-      <option value="penn station, new york, ny">Penn Station</option>
-      <option value="grand central station, new york, ny">Grand Central Station</option>
-      <option value="625 8th Avenue, New York, NY, 10018">Port Authority Bus Terminal</option>
-      <option value="staten island ferry terminal, new york, ny">Staten Island Ferry Terminal</option>
-      <option value="101 E 125th Street, New York, NY">Harlem - 125th St Station</option>
-    </select>
-    <b>End: </b>
-    <select id="end">
-      <option value="260 Broadway New York NY 10007">City Hall</option>
-      <option value="W 49th St & 5th Ave, New York, NY 10020">Rockefeller Center</option>
-      <option value="moma, New York, NY">MOMA</option>
-      <option value="350 5th Ave, New York, NY, 10118">Empire State Building</option>
-      <option value="253 West 125th Street, New York, NY">Apollo Theater</option>
-      <option value="1 Wall St, New York, NY">Wall St</option>
-    </select>
+    <div id="panel">
+      <b>Start: </b>
+      <select id="start">
+        <option value="penn station, new york, ny">Penn Station</option>
+        <option value="grand central station, new york, ny">Grand Central Station</option>
+        <option value="625 8th Avenue, New York, NY, 10018">Port Authority Bus Terminal</option>
+        <option value="staten island ferry terminal, new york, ny">Staten Island Ferry Terminal</option>
+        <option value="101 E 125th Street, New York, NY">Harlem - 125th St Station</option>
+      </select>
+      <b>End: </b>
+      <select id="end">
+        <option value="260 Broadway New York NY 10007">City Hall</option>
+        <option value="W 49th St & 5th Ave, New York, NY 10020">Rockefeller Center</option>
+        <option value="moma, New York, NY">MOMA</option>
+        <option value="350 5th Ave, New York, NY, 10118">Empire State Building</option>
+        <option value="253 West 125th Street, New York, NY">Apollo Theater</option>
+        <option value="1 Wall St, New York, NY">Wall St</option>
+      </select>
     </div>
-    <div id="map_canvas" style="top:30px;width:100%;height:80%"></div>
+    <div id="map-canvas"></div>
     &nbsp;
     <div id="warnings_panel" style="width:100%;height:10%;text-align:center"></div>
 
