--- a/example/07-services/directions-draggable/map.html
+++ b/example/07-services/directions-draggable/map.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Directions Draggable</title>
+    <title>Draggable directions</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="float:left;width:70%; height:100%"></div>
+    <div id="map-canvas" style="float:left;width:70%; height:100%"></div>
     <div id="directionsPanel" style="float:right;width:30%;height 100%">
     <p>Total Distance: <span id="total"></span></p>
     </div>
