--- a/example/07-services/elevation-paths/map.html
+++ b/example/07-services/elevation-paths/map.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Elevation Along Paths</title>
+    <title>Showing elevation along a path</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div>
-      <div id="map_canvas" style="position:relative;width:640px; height:400px; border: 1px solid black;"></div>
-      <div id="elevation_chart" style="width:640px; height:200px; "></div>
+      <div id="map-canvas" style="height:250px;"></div>
+      <div id="elevation_chart"></div>
     </div>
 
     <script src="https://www.google.com/jsapi"></script>
