--- a/example/07-services/streetview-custom-tiles/map.html
+++ b/example/07-services/streetview-custom-tiles/map.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Custom StreetView</title>
+    <title>Custom Street View panorama tiles</title>
     <meta charset="utf-8">
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="width: 500px; height: 400px"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
