--- a/example/07-services/streetview-event/map.html
+++ b/example/07-services/streetview-event/map.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Street View Events</title>
+    <title>Street View events</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,23 +12,23 @@
     </style>
   </head>
   <body>
-    <div id="pano" style="width: 425px; height: 240px;float:left"></div>
-    <div id="panoInfo" style="width: 425px; height: 240 px;float:left">
-    <table>
-      <tr>
-        <td><b>Position</b></td><td id="position_cell">&nbsp;</td>
-      </tr>
-      <tr>
-        <td><b>POV Heading</b></td><td id="heading_cell">270</td>
-      </tr>
-      <tr>
-        <td><b>POV Pitch</b></td><td id="pitch_cell">0.0</td>
-      </tr>
-      <tr>
-        <td><b>Pano ID</b></td><td id="pano_cell">&nbsp;</td>
-      </tr>
+    <div id="pano" style="width: 45%; height: 100%;float:left"></div>
+    <div id="panoInfo" style="width: 45%; height: 100%;float:left">
+      <table>
+        <tr>
+          <td><b>Position</b></td><td id="position_cell">&nbsp;</td>
+        </tr>
+        <tr>
+          <td><b>POV Heading</b></td><td id="heading_cell">270</td>
+        </tr>
+        <tr>
+          <td><b>POV Pitch</b></td><td id="pitch_cell">0.0</td>
+        </tr>
+        <tr>
+          <td><b>Pano ID</b></td><td id="pano_cell">&nbsp;</td>
+        </tr>
+      </table>
       <table id="links_table"></table>
-    </table>
     </div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
