--- a/example/07-services/directions-waypoints/map.html
+++ b/example/07-services/directions-waypoints/map.html
@@ -3,50 +3,60 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Directions Waypoints</title>
+    <title>Waypoints in directions</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="float:left;width:70%;height:100%;"></div>
+    <div id="map-canvas" style="float:left;width:70%;height:100%;"></div>
     <div id="control_panel" style="float:right;width:30%;text-align:left;padding-top:20px">
-    <div style="margin:20px;border-width:2px;">
-    <b>Start:</b>
-    <select id="start">
-      <option value="Halifax, NS">Halifax, NS</option>
-      <option value="Boston, MA">Boston, MA</option>
-      <option value="New York, NY">New York, NY</option>
-      <option value="Miami, FL">Miami, FL</option>
-    </select>
-    <br>
-    <b>Waypoints:</b> <br>
-    <i>(Ctrl-Click for multiple selection)</i> <br>
-    <select multiple id="waypoints">
-      <option value="montreal, quebec">Montreal, QBC</input>
-      <option value="toronto, ont">Toronto, ONT</input>
-      <option value="chicago, il">Chicago</input>
-      <option value="winnipeg, mb">Winnipeg</input>
-      <option value="fargo, nd">Fargo</input>
-      <option value="calgary, ab">Calgary</input>
-      <option value="spokane, wa">Spokane</input>
-    </select>
-    <br>
-    <b>End:</b>
-    <select id="end">
-      <option value="Vancouver, BC">Vancouver, BC</option>
-      <option value="Seattle, WA">Seattle, WA</option>
-      <option value="San Francisco, CA">San Francisco, CA</option>
-      <option value="Los Angeles, CA">Los Angeles, CA</option>
-    </select>
-    <br>
-      <input type="submit" id="calcRoute">
-    </div>
-    <div id="directions_panel" style="margin:20px;background-color:#FFEE77;"></div>
+      <div style="margin:20px;border-width:2px;">
+        <b>Start:</b>
+        <select id="start">
+          <option value="Halifax, NS">Halifax, NS</option>
+          <option value="Boston, MA">Boston, MA</option>
+          <option value="New York, NY">New York, NY</option>
+          <option value="Miami, FL">Miami, FL</option>
+        </select>
+        <br>
+        <b>Waypoints:</b> <br>
+        <i>(Ctrl-Click for multiple selection)</i> <br>
+        <select multiple id="waypoints">
+          <option value="montreal, quebec">Montreal, QBC</input>
+          <option value="toronto, ont">Toronto, ONT</input>
+          <option value="chicago, il">Chicago</input>
+          <option value="winnipeg, mb">Winnipeg</input>
+          <option value="fargo, nd">Fargo</input>
+          <option value="calgary, ab">Calgary</input>
+          <option value="spokane, wa">Spokane</input>
+        </select>
+        <br>
+        <b>End:</b>
+        <select id="end">
+          <option value="Vancouver, BC">Vancouver, BC</option>
+          <option value="Seattle, WA">Seattle, WA</option>
+          <option value="San Francisco, CA">San Francisco, CA</option>
+          <option value="Los Angeles, CA">Los Angeles, CA</option>
+        </select>
+        <br>
+        <input type="submit" id="calcRoute">
+      </div>
+      <div id="directions_panel" style="margin:20px;background-color:#FFEE77;"></div>
     </div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
