--- a/example/07-services/geocoding-reverse/map.html
+++ b/example/07-services/geocoding-reverse/map.html
@@ -3,23 +3,31 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Reverse Geocoding</title>
+    <title>Reverse Geocoding</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
     </style>
   </head>
   <body>
-    <div>
+    <div id="panel">
       <input id="latlng" type="textbox" value="40.714224,-73.961452">
-    </div>
-    <div>
       <input type="button" value="Reverse Geocode" id="codeLatLng">
     </div>
-    <div id="map_canvas" style="height: 90%; top:60px; border: 1px solid black;"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
