--- a/example/07-services/streetview-embed/map.html
+++ b/example/07-services/streetview-embed/map.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Embedded StreetView</title>
+    <title>Street View containers</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <div id="pano" style="width: 425px; height: 240px"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
