--- a/example/07-services/streetview-overlays/map.html
+++ b/example/07-services/streetview-overlays/map.html
@@ -2,20 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Street View Overlays</title>
+    <title>Overlays within Street View</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
     </style>
   </head>
   <body>
-    <div id="toggle">
-    <input type="button" value="Toggle Street View" id="toggleStreetView"></input>
+    <div id="panel" style="margin-left:-100px">
+      <input type="button" value="Toggle Street View" id="toggleStreetView"></input>
     </div>
-    <div id="map_canvas" style="position:relative;width: 425px; height: 240px"></div>
+    <div id="map-canvas"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
