--- a/example/07-services/streetview-service/map.html
+++ b/example/07-services/streetview-service/map.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Google Maps JavaScript API v3 Example: Street View Layer</title>
+    <title>Directly accessing Street View data</title>
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,8 +12,8 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas" style="width: 425px; height: 400px;float:left"></div>
-    <div id="pano" style="width: 425px; height: 400px;float:left"></div>
+    <div id="map-canvas" style="width: 45%; height: 100%;float:left"></div>
+    <div id="pano" style="width: 45%; height: 100%;float:left"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="application/dart" src="page.dart"></script>
