--- a/example/08-libraries/ads-adunit/map.html
+++ b/example/08-libraries/ads-adunit/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Drawing Tools Library</title>
+    <title>Map Ad Unit</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,9 +13,9 @@
     </style>
   </head>
   <body>
-    <div id="map_canvas"></div>
+    <div id="map-canvas"></div>
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=drawing"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=adsense"></script>
     <script type="application/dart" src="page.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
