--- a/example/08-libraries/ads-adunit-format/map.html
+++ b/example/08-libraries/ads-adunit-format/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Google Maps JavaScript API v3 Example: Map Ads Unit</title>
+    <title>Map Ad Unit formats</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map_canvas {
+      html, body, #map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div>
+    <div style="height:15%">
       <div style="padding:20px; display: inline-block;">
         <label for="format">Format:</label>
         <select id="format">
@@ -69,7 +69,7 @@
         </select>
       </div>
     </div>
-    <div id="map_canvas"></div>
+    <div id="map-canvas" style="height:85%"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=adsense"></script>
     <script type="application/dart" src="page.dart"></script>
