update directions-draggable example

--- a/example/08-services/directions-draggable/map.html
+++ b/example/08-services/directions-draggable/map.html
@@ -5,17 +5,50 @@
     <meta charset="utf-8">
     <title>Draggable directions</title>
     <style>
-      html, body, #map-canvas {
+      html, body {
         height: 100%;
-        margin: 0px;
-        padding: 0px
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+        float: left;
+        width: 63%;
+        height: 100%;
+      }
+      #right-panel {
+        float: right;
+        width: 34%;
+        height: 100%;
+      }
+#right-panel {
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
+}
+
+#right-panel select, #right-panel input {
+  font-size: 15px;
+}
+
+#right-panel select {
+  width: 100%;
+}
+
+#right-panel i {
+  font-size: 12px;
+}
+
+      .panel {
+        height: 100%;
+        overflow: auto;
       }
     </style>
   </head>
   <body>
-    <div id="map-canvas" style="float:left;width:70%; height:100%"></div>
-    <div id="directionsPanel" style="float:right;width:30%;height 100%">
-    <p>Total Distance: <span id="total"></span></p>
+    <div id="map"></div>
+    <div id="right-panel">
+      <p>Total Distance: <span id="total"></span></p>
     </div>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
