--- a/example/08-services/maxzoom-simple/map.html
+++ b/example/08-services/maxzoom-simple/map.html
@@ -15,7 +15,7 @@
   <body>
     <div id="map-canvas"></div>
 
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?v=beta"></script>
     <script defer src="page.dart.js"></script>
 
   </body>
