--- a/example/01-basics/map-projection-simple/map.html
+++ b/example/01-basics/map-projection-simple/map.html
@@ -4,15 +4,22 @@
     <meta charset="utf-8">
     <title>Custom map projections</title>
     <style>
-      html, body, #map-canvas {
+      html, body, #map {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+
+      #coords {
+        background-color: black;
+        color: white;
+        padding: 5px;
+      }
     </style>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
+    <div id="coords"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script defer src="page.dart.js"></script>
