--- a/example/01-basics/map-rtl/map.html
+++ b/example/01-basics/map-rtl/map.html
@@ -4,7 +4,7 @@
     <title>Right-to-Left Languages</title>
     <meta charset="utf-8">
     <style>
-      html, body, #map-canvas {
+      html, body, #map {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -12,9 +12,9 @@
     </style>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
 
-    <script src="http://maps.googleapis.com/maps/api/js?language=ar"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?language=ar&region=EG"></script>
     <script defer src="page.dart.js"></script>
 
   </body>
