--- a/example/01-basics/map-coordinates/map.html
+++ b/example/01-basics/map-coordinates/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map-canvas {
+      html, body, #map {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script defer src="page.dart.js"></script>
