--- a/example/01-basics/map-geolocation/map.html
+++ b/example/01-basics/map-geolocation/map.html
@@ -5,15 +5,31 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map-canvas {
+      html, body, #map {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+      .custom-map-control-button {
+        appearance: button;
+        background-color: #fff;
+        border: 0;
+        border-radius: 2px;
+        box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        margin: 10px;
+        padding: 0 0.5em;
+        height: 40px;
+        font: 400 18px Roboto, Arial, sans-serif;
+        overflow: hidden;
+      }
+      .custom-map-control-button:hover {
+        background: #ebebeb;
+      }
     </style>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script defer src="page.dart.js"></script>
