resync examples/02-events

--- a/example/02-events/event-click-latlng/map.html
+++ b/example/02-events/event-click-latlng/map.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Event Click LatLng</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Using closures in event listeners</title>
     <style>
       html, body, #map {
         height: 100%;
