resync examples/03-controls

--- a/example/03-controls/control-default/map.html
+++ b/example/03-controls/control-default/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Control positioning</title>
+    <title>Default Controls</title>
     <style>
       html, body, #map {
         height: 100%;
