--- a/example/03-controls/control-custom-state/map.html
+++ b/example/03-controls/control-custom-state/map.html
@@ -5,15 +5,41 @@
     <meta charset="utf-8">
     <title>Adding state to controls</title>
     <style>
-      html, body, #map-canvas {
+      html, body, #map {
         height: 100%;
         margin: 0px;
         padding: 0px
       }
+
+      #goCenterUI,
+      #setCenterUI {
+        background-color: #fff;
+        border: 2px solid #fff;
+        border-radius: 3px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        float: left;
+        margin-bottom: 22px;
+        text-align: center;
+      }
+
+      #goCenterText,
+      #setCenterText {
+        color: #191919;
+        font-family: Roboto, Arial, sans-serif;
+        font-size: 15px;
+        line-height: 25px;
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+
+      #setCenterUI {
+        margin-left: 12px;
+      }
     </style>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script defer src="page.dart.js"></script>
