migrate example/05-drawing_on_map/overlay-simple for goole_maps-4.0.0

--- a/example/05-drawing_on_map/overlay-simple/map.html
+++ b/example/05-drawing_on_map/overlay-simple/map.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Adding a Custom Overlay</title>
     <style>
-      html, body, #map-canvas {
+      html, body, #map {
         height: 100%;
         margin: 0px;
         padding: 0px
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script defer src="page.dart.js"></script>
